# BattleshipGameAlgo

./: .gitignore  BattleshipGameAlgo.sln
BattleshipGameAlgo/: A.attack-a  AttackReciever.cpp  AttackReciever.h  B.attack-b  BattleshipGameAlgo.cpp  BattleshipGameAlgo.h  BattleshipGameAlgo.vcxproj  BattleshipGameAlgo.vcxproj.filters  Bonus.cpp  Contants.h  GameBordUtils.cpp  GameBordUtils.h  IBattleshipGameAlgo.h  IOLib.h  a.txt  b.txt  board.sboard  commentsAndQuestions.txt  file_names.txt  file_names_working.txt  functions shit for validate board.txt  main.cpp  michael.txt  player.h  stdafx.cpp  stdafx.h
BattleshipGameMain/: main.cpp
Common/: AttackReciever.h  Bonus.cpp  Bonus.h  Common.vcxproj  Common.vcxproj.filters  GameBoardUtils.cpp  GameBoardUtils.h  GameBordUtils.cpp  ShipDetailsBoard.h
Debug/: BattleshipGameMain.ilk  Common.lib  NaiveAlgo.exp  NaiveAlgo.ilk  NaiveAlgo.lib  PreDefinedStepsAlgo.exp  PreDefinedStepsAlgo.ilk  PreDefinedStepsAlgo.lib  SmartAlgo.exp  SmartAlgo.ilk  SmartAlgo.lib
NaiveAlgo/: BattleshipGameAlgo.cpp  BattleshipGameAlgo.h  NaiveAlgo.vcxproj  NaiveAlgo.vcxproj.filters  NaiveBattleshipGameAlgo.cpp  NaiveBattleshipGameAlgo.h
PreDefinedStepsAlgo/: BattleshipGameAlgo.cpp  BattleshipGameAlgo.h  PreDefinedStepsAlgo.vcxproj  PreDefinedStepsAlgo.vcxproj.filters
SmartAlgo/: SmartAlgo.vcxproj  SmartBattleshipGameAlgo.cpp  SmartBattleshipGameAlgo.h
הגשה/: CMakeLists.txt  students.txt
הגשה/ex1_205969710_302444229_200024438/: AttackReciever.cpp  B.attack-b  BattleshipGameAlgo.h  Bonus.cpp  CMakeLists.txt  Contants.h  students.txt
(+43 files in other folders)
